// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableContentSubBlockRenderer Renders editable Markdown block correctly 1`] = `

<div class="editableContent  ">
  <div class="editableButton">
    <div class="editableButtonContent">
      Click to edit this section
    </div>
  </div>
  <div>
    <p classname="govuk-body">
    </p>
    <p>
      test
    </p>
    <p>
    </p>
  </div>
</div>

`;

exports[`EditableContentSubBlockRenderer Renders non-editable Markdown block correctly 1`] = `

<div class>
  <div class="editableButton">
    <div class="editableButtonContent">
      Click to edit this section
    </div>
  </div>
  <div>
    <p classname="govuk-body">
    </p>
    <p>
      test
    </p>
    <p>
    </p>
  </div>
</div>

`;
